tests/resources/errors/errors8.ac
import std;
import std.Error;

struct TestError :: *Error {
    const fn get_name() -> const char* {
        return "TestError";
    }
    const fn get_message() -> const char* {
        return "test error msg";
    }
}

fn foo() | raises TestError {
    std.print("foo called!");
    raise TestError{};
}

fn main() {
    try err: foo() {
        std.print("caught error!");
        std.print(err.get_message());
    };
}